--- a/index.html
+++ b/index.html
@@ -128,28 +128,34 @@
     <div class="col-sm-3" style="text-color:blue">      
       <h3>Became AACR Member Dec. 2020<h3>
       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/AACRmembership.png" class="img-responsive" style="width:100%" alt="Image">
+      <h4>Membership<h4>
     </div>
     <div class="col-sm-3">
       <h3>Accpeted Paper in May 2020<h3>
        <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/SpringerBook2020.jpg" class="img-responsive" style="width:100%" alt="Image">
-         <p> Mai, Y., & Zhang, H. (accepted). Classic linear mediation analysis of complex survey data using balanced repeated replication. In: Zhao, Y. & Chen, D. (eds), Modern Statistical Methods for Health Research. New York, NY: Springer. </p>
+       <h4>Publication<h4>
+         <p> Mai, Y., & Zhang, H. (accepted). Classic linear mediation analysis of complex survey data using balanced repeated replication. 
+           In: Zhao, Y. & Chen, D. (eds), Modern Statistical Methods for Health Research. New York, NY: Springer. </p>  
     </div>
     <div class="col-sm-3"> 
       <h3>Hosting Seminar by Dr. Land in July 2019 <h3>
       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/DrLaneSep2019.png" class="img-responsive" style="width:100;" alt="Image">
+      <h4>Service<h4>
     </div>
     <div class="col-sm-3"> 
       <h3>Conference JSM 2019<h3>
       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/JSM2019.png" class="img-responsive" style="width:%100;" alt="Image">
-    </div>
-    <div class="col-sm-3"> 
+      <h4>Presentation<h4>
+    </div>        
+  </div>
+  <div class="row" style='background:lightgray' id="myNewsc>
+     <div class="col-sm-3"> 
       <h3>Clinical Phase II Short Course 2019<h3>
       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/ClinicalPhaseII2019.jpg" class="img-responsive" style="width:%100;" alt="Image">
+      <h4>Ceitificate<h4>
         <p style="font=12px">I completed the course in The 7th Workshop on Biostatistics and Bioinformatics, May 10-12, 2019, Atlanta, GA</p>   
     </div>
   </div>
-  
-  
 </div><br>
 
 <footer class="container-fluid text-center" style='background:lightgray;'>
