Update the Navigator with Collaboration page

--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
       <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="https://yujiaomai.github.io">About</a></li>
         <li><a href="https://yujiaomai.github.io/CVymai.html">Curriculum Vitae</a></li>
+        <li><a href="https://yujiaomai.github.io/Collaboration.html">Collaboration</a></li>		
         <li><a href="https://yujiaomai.github.io/#myNews">Gallery</a></li>
-        <li><a href="https://yujiaomai.github.io">Collaboration</a></li>
+
       </ul>
     </div>
   </div>
