--- a/Collaboration.html
+++ b/Collaboration.html
@@ -56,7 +56,14 @@
  
   <div class="row" style='background:lightgray' id="myNews">
   <h1 style="text-color:white"> Colloborative Projects </h1>
- 
+  <div style="float: block-left"> 
+	<h3>Reliability Estimation for Multidimensional Measurement Scales</h3> 
+    <p></p>
+  </div>
+  <div style="float:block-left"> 
+	<h3> Claborators </h3>
+	
+  </div>
   </div>
   
   
