--- a/Collaboration.html
+++ b/Collaboration.html
@@ -48,24 +48,44 @@
 </nav>
 
 <div class="jumbotron">
+   <div class='container text-center' style="width=95%" > 
+   <h1 style="text-color:white"> Colloborative Projects </h1>
+   </div>
+   <div class="row" style='background:#DDDDDD; width=100%;' id="Cproject1">	
+	  <div style="float:left; display:inline-block; width:70%"> 
+		<div class='container text-center' style="width=95%" 
+		<h2>Project 1: Reliability Estimation for Multidimensional Measurement Scales<h2> 
+		<p></p>
+		</div>
+	  </div>
+	  <div style="display:inline-block;width:30%"> 
+		<h3> Collaborators <h3>	
+		 <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/ClinicalPhaseII.jpg" class="img-responsive" style="width:%100;" alt="Image">
+         <h4>Ceitificate<h4>
+    
+	  </div>
+   </div>
+   </br>
+   <div class="row" style='background:#DDDDDD; width=100%;' id="Cproject2">	
+	  <div style="float:left; display:inline-block; width:70%"> 
+		<div class='container text-center' style="width=95%" 
+		<h2>Project 2: Reliability Estimation for Multidimensional Measurement Scales</h2> 
+		<p></p>
+		</div>
+	  </div>
+	  <div style="display:inline-block;width:30%"> 
+		<h3> Collaborators </h3>	
+		 <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/ClinicalPhaseII.jpg" class="img-responsive" style="width:%100;" alt="Image">
+         <h4>Ceitificate<h4>
+    
+	  </div>
+   </div>
+  
+
   <div class='container text-center' >      	
   
   </div>
-</div> 
 
- 
-  <div class="row" style='background:lightgray' id="myNews">
-  <h1 style="text-color:white"> Colloborative Projects </h1>
-  <div style="float: block-left"> 
-	<h3>Reliability Estimation for Multidimensional Measurement Scales</h3> 
-    <p></p>
-  </div>
-  <div style="float:block-left"> 
-	<h3> Claborators </h3>
-	
-  </div>
-  </div>
-  
   
 </div><br>
 
