Update research interests
research interests

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div style='display:inline-block;width=100%; height=100%'>
         <h2>Biography<h2>
         <div style='text-align:left;'>
-        <p>Yujiao Mai received her Bachelor degree in computer science and technology in 2005, Master degree in developmental psychology in 2008, and PhD in quantitative psychology in 2014 at South China Normal University. She then finished postdoc trainings in quantitative psychology at the University of Notre Dame, and biostatistics at the University of Central Florida and St. Jude Children's Research Hospital. Yujiao’s recent research interests include Applied quantitative techniques for cancer surviorship research, structural equation modeling (SEM), mediation analysis, psychological measurements, and software development. She is currently seeking for a new position in the field of cancer research.  
+        <p>Yujiao Mai received her Bachelor degree in computer science and technology in 2005, Master degree in developmental psychology in 2008, and PhD in quantitative psychology in 2014 at South China Normal University. She then finished postdoc trainings in quantitative psychology at the University of Notre Dame, and biostatistics at the University of Central Florida and St. Jude Children's Research Hospital. Yujiao’s recent research interests include Applied statistical techniques for cancer surviorship research, structural equation modeling (SEM), psychological measurement, machine learning, and software development. She is currently seeking for a new position in the field of cancer research.  
         </p>
         </div>
       
