--- a/CVymai.html
+++ b/CVymai.html
@@ -177,8 +177,7 @@ font-family:"Arial Black",sans-serif;letter-spacing:-.2pt'>RESEARCH INTERESTS</s
 <p class=MsoListParagraph align=left style='margin-top:6.0pt;margin-right:0in;
 margin-bottom:0in;margin-left:.25in;margin-bottom:.0001pt;text-align:left;
 text-indent:-.25in;text-autospace:none'><span style='font-size:11.0pt;font-family:"Arial",sans-serif;
-letter-spacing:-.3pt'>Applied quantitative techniques for Cancer survivorship research; Structural equation modeling (SEM); Mediation analysis;
-Psychological measurements; and Software packages development.</span></p>
+letter-spacing:-.3pt'>Applied statistical techniques for Cancer survivorship research; Structural equation modeling (SEM); Psychological measurements; Machine learning; and Software packages development.</span></p>
 
 <div style='border:none;border-bottom:solid windowtext 1.0pt;padding:0in 0in 0in 0in'>
 
