--- a/index.html
+++ b/index.html
@@ -89,13 +89,22 @@
   <h1> Selected Publications </h1>
     <div class="container text-center">
       <div style="width:95%;text-align:left;font-size:20px;">
-        <li>Mai, Y., Ha, T., &amp; Soulakova, J. N. (2019). Multimediation method with balanced repeated replications for analysis of complex surveys. Structural Equation Modeling: A Multidisciplinary Journal, 26 (5), 678-684.<br><a href='#'>Paper</a></ul>
-         <li>Mai, Y., Ha, T., &amp; Soulakova, J. N. (2019). Workplace smoking restrictions and support for smoking cessation in the USA: state, region, and overall trends from 2010–11 to 2014–15. Journal of Smoking Cessation, 1-10.<br><a href='#'>Paper</a></ul>
-        <li>Mai, Y., Zhang, Z., &amp; Wen, Z. (2018). Comparing exploratory structural equation modeling and existing approaches for multiple regression with latent variables. Structural Equation Modeling: A Multidisciplinary Journal, 25(5), 737-749.<br><a href='#'>Paper</a></ul>
-       <li>Mai, Y., &amp; Zhang, Z. (2018). Software packages for Bayesian multilevel modeling. Structural Equation Modeling: A Multidisciplinary Journal, 25(4), 650-658.<br><a href='#'>Paper</a></ul>
-        <li>Mai, Y., &amp; Soulakova, J. N. (2018). Retrospective reports of former smokers: Receiving doctor's advice to quit smoking and using behavioral interventions for smoking cessation in the United States. Preventive medicine reports, 11, 290-296.<br><a href='#'>Paper</a></ul>
-        <li>Mai, Y., Leonardo, S., &amp; Soulakova, J. N. (2018). Smoke-free homes among single-parent families: Differences associated with parental race/ethnicity and smoking behaviors. Preventive Medicine Reports, 9, 18-23.<br><a href='#'>Paper</a></ul>
-        <li>Jiang, G., Mai, Y., &amp; Yuan, K. H. (2017). Advances in measurement invariance and mean comparison of latent variables: equivalence testing and a projection-based approach. Frontiers in psychology, 8, 1823-1823.<br><a href='#'>Paper</a></ul>
+        <li>Mai, Y., Ha, T., &amp; Soulakova, J. N. (2019). Multimediation method with balanced repeated replications for analysis of complex surveys. Structural Equation Modeling: A Multidisciplinary Journal, 26 (5), 678-684.<br>
+			<a href='https://www.tandfonline.com/doi/full/10.1080/10705511.2018.1559065'>Paper</a></ul>
+         <li>Mai, Y., Ha, T., &amp; Soulakova, J. N. (2019). Workplace smoking restrictions and support for smoking cessation in the USA: state, region, and overall trends from 2010–11 to 2014–15. Journal of Smoking Cessation, 1-10.
+			<br><a href='https://www.cambridge.org/core/journals/journal-of-smoking-cessation/article/workplace-smoking-restrictions-and-support-for-smoking-cessation-in-the-usa-state-region-and-overall-trends-from-201011-to-201415/C9463973E0FB5DC1D6A57D137DF7D20B'>Paper</a></ul>
+        <li>Mai, Y., Zhang, Z., &amp; Wen, Z. (2018). Comparing exploratory structural equation modeling and existing approaches for multiple regression with latent variables. Structural Equation Modeling: A Multidisciplinary Journal, 25(5), 737-749.
+			<br><a href='https://www.tandfonline.com/doi/abs/10.1080/10705511.2018.1444993'>Paper</a></ul>
+       <li>Mai, Y., &amp; Zhang, Z. (2018). Software packages for Bayesian multilevel modeling. Structural Equation Modeling: A Multidisciplinary Journal, 25(4), 650-658.
+			<br><a href='https://www.tandfonline.com/doi/abs/10.1080/10705511.2018.1431545'>Paper</a></ul>
+        <li>Mai, Y., &amp; Soulakova, J. N. (2018). Retrospective reports of former smokers: Receiving doctor's advice to quit smoking and using behavioral interventions for smoking cessation in the United States. Preventive medicine reports, 11, 290-296.
+			<br><a href='https://www.sciencedirect.com/science/article/pii/S2211335518301256'>Paper</a></ul>
+        <li>Mai, Y., Leonardo, S., &amp; Soulakova, J. N. (2018). Smoke-free homes among single-parent families: Differences associated with parental race/ethnicity and smoking behaviors. Preventive Medicine Reports, 9, 18-23.
+			<br><a href='https://www.sciencedirect.com/science/article/pii/S2211335517301778'>Paper</a></ul>
+        <li>Jiang, G., Mai, Y., &amp; Yuan, K. H. (2017). Advances in measurement invariance and mean comparison of latent variables: equivalence testing and a projection-based approach. Frontiers in psychology, 8, 1823-1823.
+			<br><a href='https://www.frontiersin.org/articles/10.3389/fpsyg.2017.01823/full'>Paper</a></ul>
+        <li>Mai, Y., Hu, J., Yan, Z., Zhen, S., Wang, S., &amp; Zhang, W. (2012). Structure and function of maladaptive cognitions in Pathological Internet Use among Chinese adolescents. Computers in Human Behavior, 28(6), 2376-2386.
+			<br><a href='https://www.sciencedirect.com/science/article/abs/pii/S0747563212002099'>Paper</a></ul>
        </div>
     </div>
   </div>
