--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <div class="jumbotron">
   <div class='container text-center' >      	
       <div style='float:left;display:inline-block;'> 
-       <p><img src="https://avatars2.githubusercontent.com/u/12761613?s=460&u=b11fe93206993be2613061aba4732dfa26ea880b&v=4" class="img-responsive" style="width:85%;border-radius: 35%;" alt="Image"></p>
+       <p><img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/heashot2021Feb.jpg" class="img-responsive" style="width:85%;border-radius: 35%;" alt="Image"></p>
        </div>  
       <div style='display:block;vertical-align:bottom;'> 
       	<h2 style='text-align:left'>Yujiao (Jo) Mai<h2>
@@ -74,7 +74,7 @@
       <div style='display:inline-block;width=100%; height=100%'>
         <h2>Biography<h2>
         <div style='text-align:left;'>
-        <p>Yujiao Mai received her Bachelor degree in computer science and technology in 2005, Master degree in developmental psychology in 2008, and PhD in quantitative psychology in 2014 at South China Normal University. She then finished postdoc trainings in quantitative psychology at the University of Notre Dame, and biostatistics at the University of Central Florida and St. Jude Children's Research Hospital. Yujiao’s recent research interests include Applied statistical techniques for cancer surviorship research, structural equation modeling (SEM), psychological measurement, machine learning, and software development. She is currently seeking for a new position in the field of cancer research.  
+        <p>Yujiao Mai received her Bachelor degree in computer science and technology in 2005, Master degree in developmental psychology in 2008, and PhD in quantitative psychology in 2014 at South China Normal University. She then finished postdoc trainings in quantitative psychology at the University of Notre Dame, and biostatistics at the University of Central Florida and St. Jude Children's Research Hospital. Yujiao’s recent research interests include Applied statistical techniques for cancer survivorship research, structural equation modeling (SEM), psychological measurement, machine learning, and software development. She is currently seeking for a new position in the field of cancer research.  
         </p>
         </div>
       
