--- a/CVymai.html
+++ b/CVymai.html
@@ -329,6 +329,11 @@ text-align:left;text-indent:-.25in;text-autospace:none'><span style='font-size:
 letter-spacing:.2pt'>Served with statistic consultation for collaboration
 research focusing on Cancer</span></p>
 
+<p class=MsoListParagraphCxSpLast align=left style='margin-left:.25in;
+text-align:left;text-indent:-.25in;text-autospace:none'><span style='font-size:
+12.0pt;font-family:Wingdings;letter-spacing:.2pt'>Ø<span style='font:7.0pt "Times New Roman"'>&nbsp;
+</span></span><span style='font-size:11.0pt;font-family:"Arial",sans-serif;
+letter-spacing:.2pt'>Participated in study protocol review</span></p>
 <div style='border:none;border-bottom:solid windowtext 1.0pt;padding:0in 0in 0in 0in'>
 
 <p class=MsoNormal align=left style='margin-top:12.0pt;text-align:left;
