--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 
 <div class="jumbotron">
   <div class='container text-center' >      	
-      <div style='float:left;display:inline-block;'> 
-       <p><img src="https://github.com/YujiaoMai/yujiaomai.github.io/blob/main/Figure/headshot2021Feb.jpg?raw=true" class="img-responsive" style="width:85%;border-radius: 45%;" alt="Image"></p>
+      <div style='float:left;display:inline-block;margin-right:48pt'> 
+       <p><img src="https://github.com/YujiaoMai/yujiaomai.github.io/blob/main/Figure/headshot2021Feb.jpg?raw=true" class="img-responsive" style="width:100%;border-radius: 45%;" alt="Image"></p>
        </div>  
       <div style='display:block;vertical-align:bottom;'> 
       	<h2 style='text-align:left'>Yujiao (Jo) Mai<h2>
