--- a/CVymai.html
+++ b/CVymai.html
@@ -177,7 +177,7 @@ font-family:"Arial Black",sans-serif;letter-spacing:-.2pt'>RESEARCH INTERESTS</s
 <p class=MsoListParagraph align=left style='margin-top:6.0pt;margin-right:0in;
 margin-bottom:0in;margin-left:.25in;margin-bottom:.0001pt;text-align:left;
 text-indent:-.25in;text-autospace:none'><span style='font-size:11.0pt;font-family:"Arial",sans-serif;
-letter-spacing:-.3pt'>Applied statistical techniques for Cancer survivorship research; Structural equation modeling (SEM); Psychological measurements; Machine learning; and Software packages development.</span></p>
+letter-spacing:-.3pt'>Applied statistical techniques for finding Cancer cures; Structural equation modeling (SEM); Psychological measurements; Machine learning; and Software packages development.</span></p>
 
 <div style='border:none;border-bottom:solid windowtext 1.0pt;padding:0in 0in 0in 0in'>
 
@@ -333,7 +333,7 @@ research focusing on Cancer</span></p>
 text-align:left;text-indent:-.25in;text-autospace:none'><span style='font-size:
 12.0pt;font-family:Wingdings;letter-spacing:.2pt'>Ø<span style='font:7.0pt "Times New Roman"'>&nbsp;
 </span></span><span style='font-size:11.0pt;font-family:"Arial",sans-serif;
-letter-spacing:.2pt'>Participated in study protocol review</span></p>
+letter-spacing:.2pt'>Participated in clinical study protocol review</span></p>
 <div style='border:none;border-bottom:solid windowtext 1.0pt;padding:0in 0in 0in 0in'>
 
 <p class=MsoNormal align=left style='margin-top:12.0pt;text-align:left;
