update header style

--- a/index.html
+++ b/index.html
@@ -55,13 +55,16 @@
        <p><img src="https://github.com/YujiaoMai/yujiaomai.github.io/blob/main/Figure/headshot2021Feb.jpg?raw=true" class="img-responsive" style="width:100%;border-radius: 45%;" alt="Image"></p>
        </div>  
       <div style='display:block;vertical-align:bottom;'> 
-      	<h2 style='text-align:left'>Yujiao (Jo) Mai<h2>
+		<h2> &nbsp; <h2>
+		<br>
+		<br>
+      	<h2 style='text-align:left;font-family: Tahoma, sans-serif;font-size: 44px;'>Yujiao (Jo) Mai<h2>
         <h3 style='text-align:left'> BS. MS. PhD. <h3>
         <br>
         <br>
         <br>
         <br>
-        <h2 style='text-align:left'> Contact <h2>
+        <h2 style='text-align:left;font-family: Tahoma, sans-serif;'>&#9839; Contact <h2>
         <div style='text-align:left;'>
         <item style='font-size:20px'>       
         <ul>Email: yujiaomai@gmail.com</ul> 
@@ -72,7 +75,7 @@
        </div>
        
       <div style='display:inline-block;width=100%; height=100%'>
-        <h2>Biography<h2>
+        <h2 style="font-family: Tahoma, sans-serif;">Biography<h2>
         <div style='text-align:left;'>
         <p>Yujiao Mai received her Bachelor degree in computer science and technology in 2005, Master degree in developmental psychology in 2008, and PhD in quantitative psychology in 2014 at South China Normal University. She then finished postdoc trainings in quantitative psychology at the University of Notre Dame, and biostatistics at the University of Central Florida and St. Jude Children's Research Hospital. Yujiao’s recent research interests include Applied statistical techniques for cancer survivorship research, structural equation modeling (SEM), psychological measurement, machine learning, and software development. She is currently seeking for a new position in the field of cancer research.  
         </p>
@@ -86,7 +89,7 @@
   
 <div class="container-fluid bg-3 text-center">    
   <div class="row">
-  <h1> Selected Publications </h1>
+  <h1 style="font-family: Tahoma, sans-serif;">&#9883; Selected Publications &#9883;</h1>
     <div class="container text-center">
       <div style="width:95%;text-align:left;font-size:20px;">
         <li>Mai, Y., Ha, T., &amp; Soulakova, J. N. (2019). Multimediation method with balanced repeated replications for analysis of complex surveys. Structural Equation Modeling: A Multidisciplinary Journal, 26 (5), 678-684.<br>
@@ -110,10 +113,10 @@
   </div>
   
   <div class="row">
-  <h1> Software Packages </h1>
+  <h1 style="font-family: Tahoma, sans-serif;"> &#9883; Software Packages &#9883;</h1>
     <div class="col-sm-3" >
       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/Omega.png" class="img-responsive" style="width:100%" alt="Image">
-            <h4>Omega-ESEM/BSEM<h4>
+            <h4>Omega-generic<h4>
         <p> (Mai, Y., Srivastava, D., & Krull, K., 2020)</p>
     </div>
     <div class="col-sm-3"> 
@@ -134,36 +137,36 @@
   </div><br>
   
   <div class="row" style='background:lightgray' id="myNews">
-  <h1 style="text-color:white"> News </h1>
-    <div class="col-sm-3" style="text-color:blue">      
-      <h3>Became AACR Member Dec. 2020<h3>
+  <h1 style="color:blue;font-family: Tahoma, sans-serif;">&#9752; News &#9752;</h1>
+    <div class="col-sm-3" style="text-color:blue">   
       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/AACRmembership.png" class="img-responsive" style="width:100%" alt="Image">
-      <h4>Membership<h4>
+      <h3>Became AACR Member Dec. 2020<h3>
+	  <h4 style="color:blue">&#9818; Membership<h4>
     </div>
-    <div class="col-sm-3">
-      <h3>Accpeted Paper in May 2020<h3>
+    <div class="col-sm-3">      
        <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/SpringerBook2020.jpg" class="img-responsive" style="width:100%" alt="Image">
-       <h4>Publication<h4>
-         <p> Mai, Y., & Zhang, H. (accepted). Classic linear mediation analysis of complex survey data using balanced repeated replication. 
+        <p style="text-align:left;"> Mai, Y., & Zhang, H. (accepted). Classic linear mediation analysis of complex survey data using balanced repeated replication. 
            In: Zhao, Y. & Chen, D. (eds), Modern Statistical Methods for Health Research. New York, NY: Springer. </p>  
-    </div>
-    <div class="col-sm-3"> 
-      <h3>Hosting Seminar by Dr. Land in July 2019 <h3>
+       <h3>Accpeted Paper in May 2020<h3>
+	   <h4 style="color:blue">&#9816; Publication<h4>
+   </div>
+    <div class="col-sm-3">       
       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/DrLaneSep2019.png" class="img-responsive" style="width:100;" alt="Image">
-      <h4>Service<h4>
+      <h3>Hosting Seminar by Dr. Land in July 2019 <h3>
+	  <h4 style="color:blue">&#9812; Service<h4>
     </div>
     <div class="col-sm-3"> 
-      <h3>Conference JSM 2019<h3>
       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/JSM2019.png" class="img-responsive" style="width:%100;" alt="Image">
-      <h4>Presentation<h4>
+      <h3>Conference JSM 2019<h3>
+	  <h4 style="color:blue">&#9822; Presentation<h4>
     </div>        
   </div>
   <div class="row" style='background:lightgray' id="myNewsc>
      <div class="col-sm-3"> 
+      <div><img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/ClinicalPhaseII.jpg" class="img-responsive" style="width:%100;" alt="Image">
+      <p style="font=12px;text-align:left;">&#9881; I completed the course in The 7th Workshop on Biostatistics and Bioinformatics, May 10-12, 2019, Atlanta, GA</p></div> 
       <h3>Clinical Phase II Short Course 2019<h3>
-      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/ClinicalPhaseII.jpg" class="img-responsive" style="width:%100;" alt="Image">
-      <h4>Ceitificate<h4>
-        <p style="font=12px">I completed the course in The 7th Workshop on Biostatistics and Bioinformatics, May 10-12, 2019, Atlanta, GA</p>   
+	  <h4 style="color:blue">&#9881; Ceitificate<h4>		
     </div>
   </div>
 </div><br>
