--- a/index.html
+++ b/index.html
@@ -115,24 +115,24 @@
   <div class="row">
   <h1 style="font-family: Tahoma, sans-serif;"> &#9883; Software Packages &#9883;</h1>
     <div class="col-sm-3" >
-      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/Omega.png" class="img-responsive" style="width:100%" alt="Image">
-            <h4>Omega-generic<h4>
-        <p> (Mai, Y., Srivastava, D., & Krull, K., 2020)</p>
+      <a href='https://cran.r-project.org/web/packages/OmegaG'><img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/Omega.png" class="img-responsive" style="width:100%" alt="Image"></a>
+            <h4><a href='https://cran.r-project.org/web/packages/OmegaG'>R package: Omega-generic</a><h4>
+        <p>(Mai, Y., Srivastava, D., & Krull, K., 2021)</p>
     </div>
     <div class="col-sm-3"> 
-      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/MedSurvey.png" class="img-responsive" style="width:100%" alt="Image">
-            <h4><a href='https://cran.r-project.org/web/packages/MedSurvey/index.html'>MedSurvey</a><h4>
+      <a href='https://cran.r-project.org/web/packages/MedSurvey/index.html><img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/MedSurvey.png" class="img-responsive" style="width:100%" alt="Image"></a>
+            <h4><a href='https://cran.r-project.org/web/packages/MedSurvey/index.html'>R pakcage: MedSurvey</a><h4>
         <p>(Mai, Y., Srivastava, D., & Zhang, H., 2019)</p>
     </div>   
     <div class="col-sm-3"> 
-      <img src="https://webpower.psychstat.org/wiki/_media/logo.png" class="img-responsive" style="width:100%" alt="Image">
-            <h4><a href='https://webpower.psychstat.org/wiki/'>WebPower</a><h4>
-        <p>(Zhang, Z., et al., 2014-2017)</p>
+      <a href='https://webpower.psychstat.org/wiki/'><img src="https://webpower.psychstat.org/wiki/_media/logo.png" class="img-responsive" style="width:100%" alt="Image"></a>
+			<h4><a href='https://webpower.psychstat.org/wiki/'> Website: WebPower (Zhang, Z., et al., 2014-2017)</a><h4>
+			<h4><a href='https://cran.r-project.org/web/packages/WebPower/'>R package: WebPower (Zhang, Z., Mai, Y., 2018)</a><h4>            
     </div>
     <div class="col-sm-3">
       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/WebSEM.png" class="img-responsive" style="width:100%" alt="Image">
       <h4><a href='https://websem.psychstat.org/login.php'>WebSEM</a><h4>
-      <p>(Zhang, Z., Yuan, K.-H., & Mai, Y., 2014-2017)</p>
+      <p>(Zhang, Z., Yuan, K.-H., & Mai, Y., 2014-2018)</p>
     </div>
   </div><br>
   
