--- a/index.html
+++ b/index.html
@@ -120,14 +120,15 @@
         <p>(Mai, Y., Srivastava, D., & Krull, K., 2021)</p>
     </div>
     <div class="col-sm-3"> 
-      <a href='https://cran.r-project.org/web/packages/MedSurvey/index.html><img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/MedSurvey.png" class="img-responsive" style="width:100%" alt="Image"></a>
-            <h4><a href='https://cran.r-project.org/web/packages/MedSurvey/index.html'>R pakcage: MedSurvey</a><h4>
+      <a href='https://cran.r-project.org/web/packages/MedSurvey/index.html'><img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/MedSurvey.png" class="img-responsive" style="width:100%" alt="Image"></a>
+        <h4><a href='https://cran.r-project.org/web/packages/MedSurvey/index.html'>R pakcage: MedSurvey</a><h4>
         <p>(Mai, Y., Srivastava, D., & Zhang, H., 2019)</p>
     </div>   
     <div class="col-sm-3"> 
       <a href='https://webpower.psychstat.org/wiki/'><img src="https://webpower.psychstat.org/wiki/_media/logo.png" class="img-responsive" style="width:100%" alt="Image"></a>
-			<h4><a href='https://webpower.psychstat.org/wiki/'> Website: WebPower (Zhang, Z., et al., 2014-2017)</a><h4>
-			<h4><a href='https://cran.r-project.org/web/packages/WebPower/'>R package: WebPower (Zhang, Z., Mai, Y., 2018)</a><h4>            
+			<h4><a href='https://webpower.psychstat.org/wiki/'> Website: (Zhang, Z., et al., 2014-2017)</a><h4>
+			<h4><a href='https://webpower.psychstat.org/wiki/'> Book: (Ed. Zhang, Z., & Yuan, K-H., 2018)</a><h4>
+			<h4><a href='https://cran.r-project.org/web/packages/WebPower/'>R package: (Zhang, Z., & Mai, Y., 2018)</a><h4>            
     </div>
     <div class="col-sm-3">
       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/WebSEM.png" class="img-responsive" style="width:100%" alt="Image">
@@ -138,6 +139,13 @@
   
   <div class="row" style='background:lightgray' id="myNews">
   <h1 style="color:blue;font-family: Tahoma, sans-serif;">&#9752; News &#9752;</h1>
+    <div class="col-sm-3">      
+       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/SpringerBook2020.jpg" class="img-responsive" style="width:100%" alt="Image">
+        <p style="text-align:left;"> Mai, Y., & Zhang, H. (accepted). Classic linear mediation analysis of complex survey data using balanced repeated replication. 
+           In: <a href='https://www.springer.com/gp/book/9783030724368'>Zhao, Y. & Chen, D. (eds), Modern Statistical Methods for Health Research. New York, NY: Springer.</a> </p>  
+       <h3>Accpeted Paper in May 2020<h3>
+	   <h4 style="color:blue">&#9816; Publication<h4>
+   </div>
     <div class="col-sm-3" style="text-color:blue">   
       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/AACRmembership.png" class="img-responsive" style="width:100%" alt="Image">
       <h3>Became AACR Member Dec. 2020<h3>
