--- a/CVymai.html
+++ b/CVymai.html
@@ -583,7 +583,7 @@ text-indent:-.5in;text-autospace:none'><b><span style='font-size:11.0pt;
 font-family:"Arial",sans-serif'>Mai, Y.</span></b><span style='font-size:11.0pt;
 font-family:"Arial",sans-serif'>, Srivastava, D. K., &amp; Zhang, H. (2019). <i>MedSurvey:
 Mediation analysis for complex surveys (version 1.1.1.2.0) [Computer Software].</i>
-Retrieved from https://cran.r-project.org/package=MedSurvey</span></p>
+Retrieved from <a href='https://cran.r-project.org/package=MedSurvey'>https://cran.r-project.org/package=MedSurvey</a></span></p>
 
 <div style='border:none;border-bottom:solid windowtext 1.0pt;padding:0in 0in 0in 0in'>
 
