--- a/index.html
+++ b/index.html
@@ -139,13 +139,6 @@
   
   <div class="row" style='background:lightgray' id="myNews">
   <h1 style="color:blue;font-family: Tahoma, sans-serif;">&#9752; News &#9752;</h1>
-    <div class="col-sm-3">      
-       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/SpringerBook2020.jpg" class="img-responsive" style="width:100%" alt="Image">
-        <p style="text-align:left;"> Mai, Y., & Zhang, H. (accepted). Classic linear mediation analysis of complex survey data using balanced repeated replication. 
-           In: <a href='https://www.springer.com/gp/book/9783030724368'>Zhao, Y. & Chen, D. (eds), Modern Statistical Methods for Health Research. New York, NY: Springer.</a> </p>  
-       <h3>Accpeted Paper in May 2020<h3>
-	   <h4 style="color:blue">&#9816; Publication<h4>
-   </div>
     <div class="col-sm-3" style="text-color:blue">   
       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/AACRmembership.png" class="img-responsive" style="width:100%" alt="Image">
       <h3>Became AACR Member Dec. 2020<h3>
@@ -169,13 +162,26 @@
 	  <h4 style="color:blue">&#9822; Presentation<h4>
     </div>        
   </div>
-  <div class="row" style='background:lightgray' id="myNewsc>
+   <div class="row" style='background:lightgray' id="myNewsc">
+      <div class="col-sm-3"> 
+      <div><img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/Coursera_IBM_Certificate_DataScienceM.png" class="img-responsive" style="width:%100;" alt="Image">
+      <p style="font=12px;text-align:left;">&#9881; I completed the IBM-authorized course of Data Science Methodology, in Feb. 21, 2021, Memphis, TN</p></div> 
+      <h3>Data Science Methodology 2021<h3>
+	  <h4 style="color:blue">&#9881; Ceitificate<h4>		
+     </div>
+   	 <div class="col-sm-3"> 
+      <div><img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/Coursera_IBM_Certificate_MachineL.png" class="img-responsive" style="width:%100;" alt="Image">
+      <p style="font=12px;text-align:left;">&#9881; I completed the IBM-authorized course of Machine Learning with Python, in Jan. 28, 2021, Memphis, TN</p></div> 
+      <h3>Machine Learning with Python 2021<h3>
+	  <h4 style="color:blue">&#9881; Ceitificate<h4>		
+     </div>
      <div class="col-sm-3"> 
       <div><img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/ClinicalPhaseII.jpg" class="img-responsive" style="width:%100;" alt="Image">
       <p style="font=12px;text-align:left;">&#9881; I completed the course in The 7th Workshop on Biostatistics and Bioinformatics, May 10-12, 2019, Atlanta, GA</p></div> 
       <h3>Clinical Phase II Short Course 2019<h3>
 	  <h4 style="color:blue">&#9881; Ceitificate<h4>		
-    </div>
+     </div>
+
   </div>
 </div><br>
 
