--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   <div class="row">
   <h1 style="font-family: Tahoma, sans-serif;"> &#9883; Software Packages &#9883;</h1>
     <div class="col-sm-3" >
-      <a href='https://cran.r-project.org/web/packages/OmegaG'><img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/Omega.png" class="img-responsive" style="width:100%" alt="Image"></a>
+      <a href='https://cran.r-project.org/web/packages/OmegaG'><img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/OmegaG.png" class="img-responsive" style="width:100%" alt="Image"></a>
             <h4><a href='https://cran.r-project.org/web/packages/OmegaG'>R package: Omega-generic</a><h4>
         <p>(Mai, Y., Srivastava, D., & Krull, K., 2021)</p>
     </div>
