--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   <h1 style="font-family: Tahoma, sans-serif;"> &#9883; Software Packages &#9883;</h1>
     <div class="col-sm-3" >
       <a href='https://cran.r-project.org/web/packages/OmegaG'><img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/OmegaG.png" class="img-responsive" style="width:100%" alt="Image"></a>
-            <h4><a href='https://cran.r-project.org/web/packages/OmegaG'>R package: Omega-generic</a><h4>
+            <h4><a href='https://cran.r-project.org/web/packages/OmegaG'>R package: OmegaG</a><h4>
         <p>(Mai, Y., Srivastava, D., & Krull, K., 2021)</p>
     </div>
     <div class="col-sm-3"> 
@@ -127,8 +127,8 @@
     <div class="col-sm-3"> 
       <a href='https://webpower.psychstat.org/wiki/'><img src="https://webpower.psychstat.org/wiki/_media/logo.png" class="img-responsive" style="width:100%" alt="Image"></a>
 			<h4><a href='https://webpower.psychstat.org/wiki/'> Website: (Zhang, Z., et al., 2014-2017)</a><h4>
-			<h4><a href='https://webpower.psychstat.org/wiki/'> Book: (Ed. Zhang, Z., & Yuan, K-H., 2018)</a><h4>
-			<h4><a href='https://cran.r-project.org/web/packages/WebPower/'>R package: (Zhang, Z., & Mai, Y., 2018)</a><h4>            
+			<h4><a href='https://webpower.psychstat.org/wiki/'> Book edited by Zhang and Yuan in 2018</a><h4>
+			<h4><a href='https://cran.r-project.org/web/packages/WebPower/'>R package by Zhang (cre.,aut.), Mai (aut.), and Yang (con.) in 2018</a><h4>            
     </div>
     <div class="col-sm-3">
       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/WebSEM.png" class="img-responsive" style="width:100%" alt="Image">
@@ -163,25 +163,25 @@
     </div>        
   </div>
    <div class="row" style='background:lightgray' id="myNewsc">
+   <h1 style="color:blue;font-family: Tahoma, sans-serif;">&#9881; Certificates &#9881;</h1>
       <div class="col-sm-3"> 
       <div><img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/Coursera_IBM_Certificate_DataScienceM.png" class="img-responsive" style="width:%100;" alt="Image">
       <p style="font=12px;text-align:left;">&#9881; I completed the IBM-authorized course of Data Science Methodology, in Feb. 21, 2021, Memphis, TN</p></div> 
       <h3>Data Science Methodology 2021<h3>
-	  <h4 style="color:blue">&#9881; Ceitificate<h4>		
+	  <h4 style="color:blue">&#9881; Certificate<h4>		
      </div>
    	 <div class="col-sm-3"> 
       <div><img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/Coursera_IBM_Certificate_MachineL.png" class="img-responsive" style="width:%100;" alt="Image">
       <p style="font=12px;text-align:left;">&#9881; I completed the IBM-authorized course of Machine Learning with Python, in Jan. 28, 2021, Memphis, TN</p></div> 
       <h3>Machine Learning with Python 2021<h3>
-	  <h4 style="color:blue">&#9881; Ceitificate<h4>		
+	  <h4 style="color:blue">&#9881; Certificate<h4>		
      </div>
      <div class="col-sm-3"> 
       <div><img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/ClinicalPhaseII.jpg" class="img-responsive" style="width:%100;" alt="Image">
       <p style="font=12px;text-align:left;">&#9881; I completed the course in The 7th Workshop on Biostatistics and Bioinformatics, May 10-12, 2019, Atlanta, GA</p></div> 
       <h3>Clinical Phase II Short Course 2019<h3>
-	  <h4 style="color:blue">&#9881; Ceitificate<h4>		
+	  <h4 style="color:blue">&#9881; Certificate<h4>		
      </div>
-
   </div>
 </div><br>
 
