UPDATE LOGO AND LINKS

--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
   <h1 style="color:blue;font-family: Tahoma, sans-serif;">&#9752; News &#9752;</h1>
     <div class="col-sm-3" style="text-color:blue">   
       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/AACRmembership.png" class="img-responsive" style="width:100%" alt="Image">
-      <h3>Became AACR Member Dec. 2020<h3>
+      <p>I became a certificated associate member of <a href='https://www.aacr.org/'>American Association for Cancer Research (AACR)</a> in 2020 Winter.</p>
+	  <h3>Became AACR Member Dec. 2020<h3>
 	  <h4 style="color:blue">&#9818; Membership<h4>
     </div>
     <div class="col-sm-3">      
@@ -158,7 +159,8 @@
     </div>
     <div class="col-sm-3"> 
       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/JSM2019.png" class="img-responsive" style="width:%100;" alt="Image">
-      <h3>Conference JSM 2019<h3>
+      <p style="text-align:left;">I presented in the <a href="https://www.amstat.org/ASA/Meetings/Joint-Statistical-Meetings.aspx">Joint-Statistical-Meetings (JSM)</a> in 2019.</p>
+	  <h3>Conference JSM 2019<h3>
 	  <h4 style="color:blue">&#9822; Presentation<h4>
     </div>        
   </div>
