--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   <h1 style="color:blue;font-family: Tahoma, sans-serif;">&#9752; News &#9752;</h1>
     <div class="col-sm-3" style="text-color:blue">   
       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/AACRmembership.png" class="img-responsive" style="width:100%" alt="Image">
-      <p>I became a certificated associate member of <a href='https://www.aacr.org/'>American Association for Cancer Research (AACR)</a> in 2020 Winter.</p>
+      <p style="text-align:left;">I became a certificated associate member of <a href='https://www.aacr.org/'>American Association for Cancer Research (AACR)</a> in 2020 Winter.</p>
 	  <h3>Became AACR Member Dec. 2020<h3>
 	  <h4 style="color:blue">&#9818; Membership<h4>
     </div>
