--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
       </button>
       <a class="navbar-brand" href="https://yujiaomai.github.io" style='font-size:44px;color:white;vertical-align: middle;'>Yujiao (Jo) Mai</a>
     </div>
-    <div class='navbar-header' style='width:50%'>     
+    <div class='navbar-header' style='width:50%;'>     
       <p> </p>  
     </div>
     
-    <div class="collapse navbar-collapse" id="myNavbar" style='text-align:right; font-size:30px'>
+    <div class="collapse navbar-collapse" id="myNavbar" style='text-align:right; font-size:30px;'>
       <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="https://yujiaomai.github.io">About</a></li>
         <li><a href="https://yujiaomai.github.io/CVymai.html">Curriculum Vitae</a></li>
@@ -51,7 +51,7 @@
 
 <div class="jumbotron">
   <div class='container text-center' >      	
-      <div style='float:left;display:inline-block;margin-right:48pt'> 
+      <div style='float:left;display:inline-block;margin-right:48pt;'> 
        <p><img src="https://github.com/YujiaoMai/yujiaomai.github.io/blob/main/Figure/headshot2021Feb.jpg?raw=true" class="img-responsive" style="width:100%;border-radius: 45%;" alt="Image"></p>
        </div>  
       <div style='display:block;vertical-align:bottom;'> 
@@ -115,38 +115,38 @@
   <div class="row">
   <h1 style="font-family: Tahoma, sans-serif;"> &#9883; Software Packages &#9883;</h1>
     <div class="col-sm-3" >
-      <a href='https://cran.r-project.org/web/packages/OmegaG'><img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/OmegaG.png" class="img-responsive" style="width:100%" alt="Image"></a>
+      <a href='https://cran.r-project.org/web/packages/OmegaG'><img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/OmegaG.png" class="img-responsive" style="width:100%;" alt="Image"></a>
             <h4><a href='https://cran.r-project.org/web/packages/OmegaG'>R package: OmegaG</a><h4>
         <p>(Mai, Y., Srivastava, D., & Krull, K., 2021)</p>
     </div>
     <div class="col-sm-3"> 
-      <a href='https://cran.r-project.org/web/packages/MedSurvey/index.html'><img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/MedSurvey.png" class="img-responsive" style="width:100%" alt="Image"></a>
+      <a href='https://cran.r-project.org/web/packages/MedSurvey/index.html'><img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/MedSurvey.png" class="img-responsive" style="width:100%;" alt="Image"></a>
         <h4><a href='https://cran.r-project.org/web/packages/MedSurvey/index.html'>R pakcage: MedSurvey</a><h4>
         <p>(Mai, Y., Srivastava, D., & Zhang, H., 2019)</p>
     </div>   
     <div class="col-sm-3"> 
-      <a href='https://webpower.psychstat.org/wiki/'><img src="https://webpower.psychstat.org/wiki/_media/logo.png" class="img-responsive" style="width:100%" alt="Image"></a>
+      <a href='https://webpower.psychstat.org/wiki/'><img src="https://webpower.psychstat.org/wiki/_media/logo.png" class="img-responsive" style="width:100%;" alt="Image"></a>
 			<h4><a href='https://webpower.psychstat.org/wiki/'> Website: (Zhang, Z., et al., 2014-2017)</a><h4>
 			<h4><a href='https://webpower.psychstat.org/wiki/'> Book edited by Zhang and Yuan in 2018</a><h4>
 			<h4><a href='https://cran.r-project.org/web/packages/WebPower/'>R package by Zhang (cre.,aut.), Mai (aut.), and Yang (con.) in 2018</a><h4>            
     </div>
     <div class="col-sm-3">
-      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/WebSEM.png" class="img-responsive" style="width:100%" alt="Image">
+      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/WebSEM.png" class="img-responsive" style="width:100%;" alt="Image">
       <h4><a href='https://websem.psychstat.org/login.php'>WebSEM</a><h4>
       <p>(Zhang, Z., Yuan, K.-H., & Mai, Y., 2014-2018)</p>
     </div>
   </div><br>
   
-  <div class="row" style='background:lightgray' id="myNews">
+  <div class="row" style='background:lightgray;' id="myNews">
   <h1 style="color:blue;font-family: Tahoma, sans-serif;">&#9752; News &#9752;</h1>
-    <div class="col-sm-3" style="text-color:blue">   
-      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/AACRmembership.png" class="img-responsive" style="width:100%" alt="Image">
+    <div class="col-sm-3" style="text-color:blue;">   
+      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/AACRmembership.png" class="img-responsive" style="width:100%;" alt="Image">
       <p style="text-align:left;">I became a certificated associate member of <a href='https://www.aacr.org/'>American Association for Cancer Research (AACR)</a> in 2020 Winter.</p>
 	  <h3>Became AACR Member Dec. 2020<h3>
 	  <h4 style="color:blue">&#9818; Membership<h4>
     </div>
     <div class="col-sm-3">      
-       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/SpringerBook2020.jpg" class="img-responsive" style="width:100%" alt="Image">
+       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/SpringerBook2020.jpg" class="img-responsive" style="width:100%;" alt="Image">
         <p style="text-align:left;"> Mai, Y., & Zhang, H. (accepted). Classic linear mediation analysis of complex survey data using balanced repeated replication. 
            In: Zhao, Y. & Chen, D. (eds), Modern Statistical Methods for Health Research. New York, NY: Springer. </p>  
        <h3>Accpeted Paper in May 2020<h3>
@@ -164,7 +164,7 @@
 	  <h4 style="color:blue">&#9822; Presentation<h4>
     </div>        
   </div>
-   <div class="row" style='background:lightgray' id="myNewsc">
+   <div class="row" style='background:lightgray;' id="myNewsc">
 	  <h1 style="color:blue;font-family: Tahoma, sans-serif;">&#9728; Recharge &#9728;</h1>
       <div class="col-sm-3"> 
       <div><img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/Coursera_IBM_Certificate_DataScienceM.png" class="img-responsive" style="width:%100;" alt="Image">
