--- a/index.html
+++ b/index.html
@@ -140,6 +140,18 @@
   <div class="row" style='background:lightgray;' id="myNews">
   <h1 style="color:blue;font-family: Tahoma, sans-serif;">&#9752; News &#9752;</h1>
     <div class="col-sm-3" style="text-color:blue;">   
+      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/XSEDE_award2021" class="img-responsive" style="width:100%;" alt="Image">
+      <p style="text-align:left;">In 2021 March, I received the computing resouces of <a href="https://jetstream-cloud.org/research/citing-jetstream.php">Jetstream</a> from <a href='https://www.xsede.org/for-users/acknowledgement'> The Extreme Science and Engineering Discovery Environment (XSEDE)</a>, which is supported by National Science Foundation grant number ACI-1548562.</p>
+	  <h3>Awarded Resources: IU/TACC (Jetstream) in 2021 <h3>
+	  <h4 style="color:Orange">&#9813; Award<h4>
+    </div>
+     <div class="col-sm-3" style="text-color:blue;">   
+      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/ENAR2021.png" class="img-responsive" style="width:100%;" alt="Image">
+      <p style="text-align:left;">I presented in the <a href="https://www.enar.org/"> Eastern North American Region (ENAR) International Biometric Society</a> Spring Meeting in 2021.</p>
+	  <h3>ENAR Spring Meeting 2021<h3>
+	  <h4 style="color:blue">&#9818; Presentation<h4>
+    </div>
+    <div class="col-sm-3" style="text-color:blue;">   
       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/AACRmembership.png" class="img-responsive" style="width:100%;" alt="Image">
       <p style="text-align:left;">I became a certificated associate member of <a href='https://www.aacr.org/'>American Association for Cancer Research (AACR)</a> in 2020 Winter.</p>
 	  <h3>Became AACR Member Dec. 2020<h3>
