--- a/index.html
+++ b/index.html
@@ -77,7 +77,12 @@
       <div style='display:inline-block;width=100%; height=100%'>
         <h2 style="font-family: Tahoma, sans-serif;">Biography<h2>
         <div style='text-align:left;'>
-        <p>Yujiao Mai received her Bachelor degree in computer science and technology in 2005, Master degree in developmental psychology in 2008, and PhD in quantitative psychology in 2014 at South China Normal University. She then finished postdoc trainings in quantitative psychology at the University of Notre Dame, and biostatistics at the University of Central Florida and St. Jude Children's Research Hospital. Yujiao’s recent research interests include Applied statistical techniques for cancer survivorship research, structural equation modeling (SEM), psychological measurement, machine learning, and software development. She is currently seeking for a new position in the field of cancer research.  
+        <p>Yujiao Mai is a Quantitative Psychologist with ten years of experience in data analysis, advancing statistical methods, and developing statistical computing tools. 
+		She has been collaborating with top scientists in Psychology, Public Health, and Cancer Survivorship research. 
+		Yujiao specializes in structural equation modeling and works hard to support research projects to improving health knowledge and health care services, especially for youth and cancer survivors. 
+		She also excels in programming and is recently interested in machine learning using various tools such as Python and SQL. 
+		Throughout these years of experience, Yujiao has contributed over ten publications of novel methods and application studies, developed three R packages and one SAS macro, and presented researches at numerous international conferences. 
+		When she is not at work, Yujiao can be found in the great mountains and wild forests.
         </p>
         </div>
       
