--- a/CVymai.html
+++ b/CVymai.html
@@ -232,11 +232,8 @@ div.WordSection1
 
 </div>
 
-<p class=MsoNormal>Applied quantitative techniques to find Cancer cures;
-Software packages development; </p>
-
-<p class=MsoNormal>Structural equation modeling (SEM); Psychological
-measurements; Machine learning;</p>
+<p class=MsoNormal>Applying quantitative methods to find Cancer cures; Software packages development; 
+Structural equation modeling (SEM); Mediation analysis; Psychological measurements; Machine learning</p>
 
 <div style='border:none;border-bottom:solid windowtext 1.0pt;padding:0in 0in 1.0pt 0in'>
 
@@ -287,7 +284,7 @@ class=MH3Char>Computer Science and Technology</span> (Minor:Law)
 
 <p class=MList1>&#10147;  Investigated (national) survey data about tobacco use/ Crohn's disease</p>
 
-<p class=MList1>&#10147;  Helped on grant proposals about tobacco use in LGBT community</p>
+<p class=MList1>&#10147;  Helped on grant proposals about tobacco use in the LGBT community</p>
 
 <p class=MList1>&#10147;  Mentored students on research and offered biostatistics consulting service</p>
 
@@ -316,6 +313,10 @@ focusing on Cancer</p>
 <p class=MH3><span class=MH3Char>Part-time Lecturer, Cognitive Psychology &amp; Experiment</span>
 <span>,&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Spring 2013</span></p>
 <p class=MH4>Guangdong University of Foreign Studies, Guangzhou, CHINA</p>
+<p class=MH3><span class=MH3Char>Lecturer, Python Basic for Data Science</span>
+<span>,&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Summer 2021</span></p>
+<p class=MH4>International Society for Data Science and Analytics (ISDSA) Academy, IN, USA</p>
+
 <div style='border:none;border-bottom:solid windowtext 1.0pt;padding:0in 0in 1.0pt 0in'>
 
 <p class=MH2>PUBLICATIONS</p>
@@ -558,6 +559,31 @@ Foundation grant [ACI-1548562]. 2021-2022</p>
 <p class=MList1>&#10147;  American Statistical Association (ASA), 2017-2021</p>
 
 <p class=MList1>&#10147;  American Association for Cancer Research (AACR), 2020-2021</p>
+
+<p class=MList1>&#10147;  International Society for Data Science and Analytics (ISDSA), 2021-present</p>
+
+<div style='border:none;border-bottom:solid windowtext 1.0pt;padding:0in 0in 1.0pt 0in'>
+
+<p class=MH2>SERVISES</p>
+
+</div>
+
+<p class=MList1>&#10147;  Board member of the International Society for Data Science and Analytics (ISDSA), 2021-present</p>
+
+<p class=MList1>&#10147;  Guest editor of the Journal of Behavioral Data Science, 2021-present</p>
+
+<p class=MList1>&#10147;  Reviewer of journal papers:
+<ul>
+<li>Structural Equation Modeling: A Multidisciplinary Journal (2 manuscripts)</li>
+<li>Journal of Statistical Computation and Simulation (3); </li>
+<li>Mathematics and Statistics (2);</li>
+<li>Bayesian Analysis (1); </li>
+<li>Mathematical Biosciences and Engineering (1); </li>
+<li>Plos One (1); </li>
+<li>Journal of Pediatric Rehabilitation (1); </li>
+<li>Asian Journal of Social Psychology (1); </li>
+</ul>
+</p>
 
 <div style='border:none;border-bottom:solid windowtext 1.0pt;padding:0in 0in 1.0pt 0in'>
 
