--- a/index.html
+++ b/index.html
@@ -77,7 +77,15 @@
       <div style='display:inline-block;width=100%; height=100%'>
         <h2 style="font-family: Tahoma, sans-serif;">Biography<h2>
         <div style='text-align:left;'>
-        <p>Yujiao Mai is a Quantitative Psychologist with ten years of experience in data analysis, advancing statistical methods, and developing statistical computing tools. She received her Bachelor's degree in computer science and technology in 2005, Master's degree in developmental psychology in 2008, and Ph.D. in quantitative psychology in 2014 at South China Normal University. Yujiao has been collaborating with top scientists in Psychology, Public Health, and Cancer Survivorship research at the University of Notre Dame, University of Central Florida, and St. Jude Children's Research Hospital. She specializes in structural equation modeling and works hard to support research projects to improving health knowledge and health care services, especially for youth and cancer survivors. She also excels in programming and is recently interested in machine learning using various tools such as Python and SQL. Throughout these years of experience, Yujiao has contributed over ten publications of novel methods and application studies, developed three R packages and one SAS macro, and presented researches at numerous international conferences. When she is not at work, Yujiao can be found in the great mountains and wild forests.        </p>
+        <p>Yujiao Mai has ten years of experience in data analysis, advancing statistical methods, and developing statistical computing tools. 
+		She received her Bachelor's degree in computer science and technology in 2005 and Ph.D. in quantitative psychology in 2014 at South China Normal University. 
+		Since 2008, Yujiao has been collaborating with top scientists in Psychology and Public Health at the Universities, and Cancer Survivorship research at the St. Jude Children's Research Hospital. 
+		She specializes in structural equation modeling and works hard to support research projects to improving health knowledge and health care services, especially for youth and cancer survivors. 
+		She also excels in programming and is recently interested in machine learning using Python and SQL. 
+		Throughout these years, Yujiao has contributed over ten publications of novel methods and application studies, three R packages and one SAS macro, and numerous presentations at international conferences. 
+		She is currently served as a Board Member of the International Society for Data Science and Analytics (ISDSA), a Guest Editor of the Journal of Behavioral Data Science, 
+		and a Reviewer for journals such as Structural Equation Modeling: A Multidisciplinary Journal.
+		When she is not at work, Yujiao can be found in the great mountains.</p>
         </div>
       
       </div>   
@@ -138,6 +146,12 @@
   
   <div class="row" style='background:lightgray;' id="myNews">
   <h1 style="color:blue;font-family: Tahoma, sans-serif;">&#9752; News &#9752;</h1>
+    <div class="col-sm-3" style="text-color:blue;">  
+	        <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/AACR2021.png" class="img-responsive" style="width:100%;" alt="Image">
+	  <p style="text-align:left;">I presented in the <a href="https://www.aacr.org/">American Association for Cancer Research (AACR)</a> Annual Meeting in 2021.</p>
+	  <h3>AACR Annual Meeting 2021<h3>
+	  <h4 style="color:blue">&#9818; Presentation<h4>
+    </div>
     <div class="col-sm-3" style="text-color:blue;">   
       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/XSEDEaward2021.png" class="img-responsive" style="width:100%;" alt="Image">
       <p style="text-align:left;">In 2021 March, I received the computing resouces of <a href="https://jetstream-cloud.org/research/citing-jetstream.php">Jetstream</a> from <a href='https://www.xsede.org/for-users/acknowledgement'> The Extreme Science and Engineering Discovery Environment (XSEDE)</a>, which is supported by National Science Foundation grant number ACI-1548562.</p>
