--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
         <div style='text-align:left;'>
         <p>Yujiao Mai has ten years of experience in data analysis, advancing statistical methods, and developing statistical computing tools. 
 		She received her Bachelor's degree in computer science and technology in 2005 and Ph.D. in quantitative psychology in 2014 at South China Normal University. 
-		Since 2008, Yujiao has been collaborating with top scientists in Psychology and Public Health at the Universities, and Cancer Survivorship research at the St. Jude Children's Research Hospital. 
+		Since 2008, Yujiao has been collaborating with top scientists in Psychology and Public Health at the Universities and Cancer Survivorship research at the St. Jude Children's Research Hospital. 
 		She specializes in structural equation modeling and works hard to support research projects to improving health knowledge and health care services, especially for youth and cancer survivors. 
 		She also excels in programming and is recently interested in machine learning using Python and SQL. 
 		Throughout these years, Yujiao has contributed over ten publications of novel methods and application studies, three R packages and one SAS macro, and numerous presentations at international conferences. 
-		She is currently served as a Board Member of the International Society for Data Science and Analytics (ISDSA), a Guest Editor of the Journal of Behavioral Data Science, 
+		She is currently serving as a Board Member of the International Society for Data Science and Analytics (ISDSA), a Guest Editor of the Journal of Behavioral Data Science, 
 		and a Reviewer for journals such as Structural Equation Modeling: A Multidisciplinary Journal.
 		When she is not at work, Yujiao can be found in the great mountains.</p>
         </div>
